--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -373,7 +373,7 @@ en:
   move_discussion_where: "Where would you like to move this discussion to?"
   delete_discussion: "Delete discussion"
   confirm_delete_discussion: "Are you sure you want to permanently delete this discussion?"
-
+  invite_to_discussion: "Invite people to discussion"
   #
   # DECISIONS / PROPOSALS / MOTIONS
   #
@@ -628,9 +628,13 @@ en:
     invitees_placeholder: "User Name <user1@example.com>, user2@example.com"
     subject: "Please join our new Loomio group, %{group}"
     invite_people: "Invite people to your group"
+    invite_to_discussion: "Invite people to this discussion"
+    invite_to_discussion_info: "Adding people to this discussion will send them an invitation to your group. They will be directed to the discussion page upon accepting the invitation."
     select_members: "Add members from %{group_name}"
     body_editable: |
       Hey there, come make decisions with us! We're using a collaborative decision-making tool called Loomio.
+    body_editable_discussion: |
+      Hey there, we would like you to make a decision with us! We're using a collaborative decision-making tool called Loomio.
     message_body: "Invitation message"
     invites_more_help2: "<p>You can invite people to your group at any time.</p><p>You might want to invite all your members in right away, or you could start by inviting just the people you’re working most closely with.</p>"
     invitation_link: "Invitation link"
