--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -373,7 +373,7 @@ en:
   move_discussion_where: "Where would you like to move this discussion to?"
   delete_discussion: "Delete discussion"
   confirm_delete_discussion: "Are you sure you want to permanently delete this discussion?"
-  invite_to_discussion: "Invite people to discussion"
+
   #
   # DECISIONS / PROPOSALS / MOTIONS
   #
@@ -629,15 +629,16 @@ en:
     subject: "Please join our new Loomio group, %{group}"
     invite_people: "Invite people to your group"
     invite_to_discussion: "Invite people to this discussion"
-    invite_to_discussion_info: "Adding people to this discussion will send them an invitation to your group. They will be directed to the discussion page upon accepting the invitation."
+    invite_to_discussion_info: "Adding people to this discussion will send them an invitation to your group. When they accept, they'll be directed to this discussion."
     select_members: "Add members from %{group_name}"
     body_editable: |
       Hey there, come make decisions with us! We're using a collaborative decision-making tool called Loomio.
     body_editable_discussion: |
-      Hey there, we would like you to make a decision with us! We're using a collaborative decision-making tool called Loomio.
+      Hey there, come and join the discussion!
     message_body: "Invitation message"
     invites_more_help2: "<p>You can invite people to your group at any time.</p><p>You might want to invite all your members in right away, or you could start by inviting just the people you’re working most closely with.</p>"
     invitation_link: "Invitation link"
+    discussion_link: "Click here to join %{group}  and participate in a discussion: %{discussion}"
     link_help: "Click this link to join %{group} on Loomio:"
     copy: "If someone did not get their invitation email, please feel free to copy the invitation link above and give it to the recipient yourself."
 
@@ -877,6 +878,8 @@ en:
       closing_in_24_hours: "Closing in 24 hours"
       headline: "%{author}'s proposal in %{group} is closing soon:"
       summary: "Summary"
+    to_join_discussion:
+      subject: "%{member} has invited you to participate in a discussion on Loomio"
     to_join_group:
       subject: "%{member} has invited you to join %{group_name} on Loomio"
     to_start_group:
