--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -905,6 +905,14 @@ en:
       ignore: "If you did not request to join Loomio please ignore this email."
 
 
+
+  #
+  # CAMPAIGNS
+  #
+
+  campaign:
+    crowdfunding_html: "Hey! Loomio is about to get a whole lot better. <a href='http://www.crowdhoster.com'>Check out our crowdfunding campaign!</a>"
+
   #
   # COMMON WORDS
   #
